fixed bug with gallery extending out of its div on small screens finally wow omg

--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -21,6 +21,7 @@
 .unviewed {
 	position: absolute;
 	cursor: pointer;
+	max-height: 50vh;
 }
 
 .viewed {
@@ -52,6 +53,10 @@
 @media (max-width: 746px) {
 	.polaroid {
 		height: 35vh;
+	}
+
+	.unviewed {
+		max-height: 60vw;
 	}
 }
 
